RESOLVED FIXED39228
[OpenVG] Fix stupid build errors from the OpenVG Path commit
https://bugs.webkit.org/show_bug.cgi?id=39228
Summary [OpenVG] Fix stupid build errors from the OpenVG Path commit
Jakob Petsovits
Reported 2010-05-17 12:34:23 PDT
Quoting myself from 1 1/2 months ago, "I really need to get my OpenVG-on-vanilla tree working again, a proper build would have avoided these errors." I'll be able to make a fully working build available soon (yay for pmax), but for now let's get this in to fix the OpenVG build.
Attachments
Patch (1.95 KB, patch)
2010-05-17 12:39 PDT, Jakob Petsovits
krit: review+
Jakob Petsovits
Comment 1 2010-05-17 12:39:08 PDT
Dirk Schulze
Comment 2 2010-05-18 01:17:39 PDT
Comment on attachment 56257 [details] Patch r=me
Jakob Petsovits
Comment 3 2010-05-18 11:09:23 PDT
Note You need to log in before you can comment on or make changes to this bug.