2010-05-18  Jakob Petsovits  <jpetsovits@rim.com>

Reviewed by Dirk Schulze.

        [OpenVG] Fix stupid build errors from the OpenVG Path commit
        https://bugs.webkit.org/show_bug.cgi?id=39228

        * platform/graphics/openvg/PainterOpenVG.cpp:
        (WebCore::PainterOpenVG::clipPath):
        * platform/graphics/openvg/PathOpenVG.cpp:
        (WebCore::Path::transform):


Canonical link: https://commits.webkit.org/50809@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59673 268f45cc-cd09-0410-ab3c-d52691b4dbfc